fixing white space wrap on lists

--- a/app/react/components/ConversationObjectList/ConversationObjectList.css
+++ b/app/react/components/ConversationObjectList/ConversationObjectList.css
@@ -95,4 +95,5 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 7px;
 }
